# EzPC

./: .gitignore  .gitmodules
SCI/src/: cleartext_library_float.h
SCI/src/FloatingPoint/: CMakeLists.txt  bool-data.h  lowmc.cpp  lowmc.h
SCI/src/GC/: CMakeLists.txt  bit.h  circuit_execution.h  deduplicate.cpp  deduplicate.h  emp-tool.h  halfgate_eva.h  halfgate_gen.h  integer.h  integer.hpp  lowmc.cpp  lowmc.h  number.cpp  number.h  orcompact.cpp  orcompact.h  subcube_query.cpp  subcube_query.h  utils.h
SCI/src/utils/: net_io_channel.h
SCI/tests/: CMakeLists.txt  test_float_lowmc.cpp
SCI/tests/GC/: CMakeLists.txt  batchlut.cpp  test_compaction.cpp  test_deduplication.cpp  test_lowmc.cpp  test_match.cpp  test_remapping.cpp  test_sort.cpp  test_subcube.cpp  test_swap.cpp
