find_package(fmt REQUIRED)
macro (add_GC_test _name)
	add_executable(${_name} "test_${_name}.cpp")
    target_link_libraries(${_name} SCI-OT fmt::fmt) 
endmacro()

add_GC_test(bit)
add_GC_test(int)
add_GC_test(msnzb)
add_GC_test(and)
add_GC_test(sort)
add_GC_test(compaction)
add_GC_test(deduplication)
add_GC_test(remapping)
add_GC_test(swap)
add_GC_test(lowmc)
