macro (add_GC_test _name)
	add_executable(${_name} "test_${_name}.cpp")
    target_link_libraries(${_name} SCI-OT fmt::fmt) 
endmacro()

add_GC_test(bit)
add_GC_test(int)
add_GC_test(msnzb)
add_GC_test(and)
add_GC_test(sort)
add_GC_test(compaction)
add_GC_test(deduplication)
add_GC_test(swap)
add_GC_test(lowmc)
add_GC_test(match)
add_GC_test(subcube)

file(GLOB SOURCES "batchpir/src/*.cpp")
list(REMOVE_ITEM SOURCES "${CMAKE_CURRENT_SOURCE_DIR}/batchpir/src/main.cpp")
add_executable(batchlut "batchlut.cpp" ${SOURCES})
find_package(SEAL 4.1 REQUIRED)
find_package(OpenMP REQUIRED)
target_link_libraries(batchlut SCI-OT fmt::fmt SEAL::seal OpenMP::OpenMP_CXX) 
target_include_directories(batchlut PRIVATE batchpir/header)
